--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "devDependencies": {
     "concurrently": "^9.2.1"
+  },
+  "dependencies": {
+    "react-icons": "^5.5.0"
   }
 }
-
