--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^9.2.1"
   },
   "dependencies": {
+    "@bytescale/upload-widget-react": "^4.19.0",
     "react-icons": "^5.5.0"
   }
 }
