--- a/backend/env.example
+++ b/backend/env.example
@@ -1,8 +1,12 @@
 # Database Configuration
+# Option 1: Individual variables (untuk development)
 DB_HOST=localhost
 DB_USER=your_username
 DB_PASSWORD=your_password
 DB_NAME=your_database_name
+
+# Option 2: DATABASE_URL (untuk production/Render)
+# DATABASE_URL=mysql://username:password@host:port/database_name
 
 # JWT Secret (Gunakan string yang kuat dan unik)
 JWT_SECRET=your_super_secret_jwt_key_here
@@ -11,10 +15,14 @@ JWT_SECRET=your_super_secret_jwt_key_here
 PORT=5000
 NODE_ENV=development
 
-# Untuk production (Render)
+# Untuk production (Render) - pilih salah satu:
+# Option A: Individual variables
 # DB_HOST=your_production_db_host
 # DB_USER=your_production_db_user
 # DB_PASSWORD=your_production_db_password
 # DB_NAME=your_production_db_name
+
+# Option B: DATABASE_URL (recommended untuk Render)
+# DATABASE_URL=mysql://username:password@host:port/database_name
 # JWT_SECRET=your_production_jwt_secret
 # NODE_ENV=production
